Revision history for {{$dist->name}}

{{$NEXT}}

1.37      2013-11-27 12:37:59 -0500
  - added release_tests_skip option for [@Author::Plicease]

1.36      2013-11-19 10:27:13 -0500
  - mb_class option on [@Author::Plicease] passes to [ModuleBuild]

1.35      2013-11-18 07:55:09 -0500
  - rm dep on [Alien]

1.34      2013-11-11 17:49:01 -0500
  - [@Author::Plicease] alien_build_command and alien_install_command be mvp

1.33      2013-11-07 12:03:21 -0500
  - update version test

1.32      2013-11-07 11:28:33 -0500
  - support for [Alien] as the builder

1.31      2013-10-16 03:34:17 -0400
  - use [Bootstrap::lib] and relatives for release more consistent
    with my other distros

1.30      2013-10-15 11:54:55 -0400
  - make xt/release/version.t less strict, so that test versions
    (eg. 0.01_01) are allowed
  - fix for the regex removing the version from README.md so that
    it works for test versions (eg. 0.01_01)

1.29      2013-10-14 14:57:46 -0400
  - add xt/release/version.t to skel and distro

1.28      2013-10-12 14:31:26 -0400
  - use require instead of use in diagnostic

1.27      2013-10-09 14:44:12 -0400
  - add readme_from option to [@Author::Plicease]
  - documentation

1.26      2013-09-27 18:17:16 -0400
  - rm dep on use bytes (that was bad)
  - create t/00_diag.t and t/00_diag.txt as part of build
  - add [Author::Plicease::Recommend] and use it by default

1.25      2013-09-18 15:56:41 -0400
  - add dep on [TextTabs]

1.24      2013-09-10 06:41:12 -0400
  - tweak the MarkDownCleanup module

1.23      2013-09-09 20:20:02 -0400
  - silence annoying warning

1.22      2013-09-07 11:02:39 -0400
  - remove extra space in markdown verbatim blocks

1.21      2013-09-07 04:26:43 -0400
  - strip the version out of the README.md

1.20      2013-09-06 15:24:02 -0400
  - add [Author::Plicease::MarkDownCleanup] to [@Author::Plicease]

1.19      2013-09-06 15:08:16 -0400
  - renamed [Author::Plicease::TravisStatus] [Author::Plicease::MarkDownCleanup]
